examples/invalid_struct_duplicate_field/src/main.pg
struct Hero {
    hp: int
    hp: int
}

func main() {
    let hero = Hero { hp: 10 };
}
